--- a/monitoring.yml
+++ b/monitoring.yml
@@ -5,9 +5,11 @@ services:
     image: prom/prometheus:latest
     container_name: prometheus
     volumes:
-      - ${PROMETHEUS_CONFIG_PATH}:/etc/prometheus/prometheus.yml
+      - ${PROMETHEUS_CONFIG_PATH}:/etc/prometheus/prometheus-values.yml
     command:
-      - '--config.file=/etc/prometheus/prometheus.yml'
+      - '--config.file=/etc/prometheus/prometheus-values.yml'
+    env_file:
+      - .env
     ports:
       - 9090:9090
     networks:
@@ -27,6 +29,22 @@ services:
       - '--path.sysfs=/host/sys'
       - '--path.rootfs=/rootfs'
       - '--collector.filesystem.ignored-mount-points=^/(sys|proc|dev|host|etc)($$|/)'
+    networks:
+      - monitoreo
+
+  alertmanager:
+    image: prom/alertmanager:latest
+    container_name: alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ${ALERTMANAGER_CONFIG_PATH}:/etc/alertmanager/alertmanager-values.yml
+    command:
+      - '--config.file=/etc/alertmanager/alertmanager-values.yml'
+    env_file:
+      - .env
+    networks:
+      - monitoreo
 
   promtail:
     image: grafana/promtail:latest
@@ -35,8 +53,20 @@ services:
       - /var/log:/var/log
       - ${PROMTAIL_CONFIG_PATH}:/etc/promtail/docker-config.yaml
     command: -config.file=/etc/promtail/docker-config.yaml
+    env_file:
+      - .env
     networks:
       - monitoreo
+  
+  prometheus-discord:
+    image: benjojo/alertmanager-discord
+    container_name: prometheus-discord
+    environment:
+      - DISCORD_WEBHOOK=${DISCORD_WEBHOOK}
+    env_file:
+      - .env
+    ports:
+      - 9094:9094 
 
   loki:
     image: grafana/loki:latest
@@ -58,4 +88,3 @@ services:
 
 networks:
   monitoreo:
-
