--- a/monitoring/promtail-values.yml
+++ b/monitoring/promtail-values.yml
@@ -6,7 +6,8 @@ positions:
   filename: /tmp/positions.yaml
 
 clients:
-  - url: ${LOKI_PUSH_URL}
+  - url: 'http://loki:3100/loki/api/v1/push'
+
 
 scrape_configs:
 - job_name: system
